bisonc++ (5.03.00)

  * Added a declaration like 'Parser() = default' to the generated parser
    class header file.

  * Added an item about exsiting constructors and how to add additional
    constructors to parser classes generated by bisonc++

  * Corrected 'see also' references in the man-pages.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 28 Jan 2017 15:12:16 +0100

bisonc++ (5.02.02)

  * Updated the description of the %prec directive.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 24 May 2016 16:33:48 +0530

bisonc++ (5.02.01)

  * Repaired an error in 'build install LOG...'.

  * Verified that 'selection' in 'build install selection' was correctly
    specified. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 18 May 2016 17:34:28 +0530

bisonc++ (5.02.00)

  * The polymorphic semantic values implementation uses a unique_ptr when
    transferring semantic values inside the geerated parser (including
    bisonc++'s own parser). See the documentation for details.

  * Added new option/directive stack-expansion defining the number of elements
    to add to a completely full semantic value stack.

  * Enlarging the semantic value stack does not require copying existing
    semantic values to the enlarged semantic value stack. Either resizing is
    used (when the capacity allows it) or the stored semantic values are moved
    to the enlarged stack, which is then swapped with the parser's semantic
    values stack.

  * More in general: the generated parser itself does not internally copy
    semantic values anymore. Copying is only used in the grammar's action
    blocks .

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 13 May 2016 13:46:18 +0530

bisonc++ (5.01.00)

  * Reimplemented polymorphic semantic values: the Meta__::Base class now is
    a virtual bease class.

  * Some templated operator& functions cannot handle two DebugMode__
    arguments. To prevent compilation errors in those cases a 